--- a/Front/src/components/styles/login.css
+++ b/Front/src/components/styles/login.css
@@ -1,6 +1,6 @@
 .login{
     background-image: url(../images/login-bg.jpg);
-    height: 741px;
+    height: 100%;
     width: 100%;
     background-size: cover;
 }
@@ -19,11 +19,27 @@
 .input-box{
     padding-bottom: 20px;
 }
+.login-form .input-box label{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    pointer-events: none;
+    transition: 0.5s;
+}
+.login-box .user-box .log-input:focus ~ label, .login-box .user-box .log-input:valid ~ label{
+    top: -20px;
+    left: 0px;
+    font-size: 12px;
+    color: rgb(115, 117, 236);
+  }
+
 .log-input{
     width: 100%;
     height: 40px;
     background-color: rgba(240, 248, 255, 0);
-    border-style: solid;
 }
 .log-btn{
     width: 100%;
