--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,4 +1,9 @@
 .App {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  transition: 0.4s;
+  margin-left: 70px;
+}
+.App.open{
+  margin-left: 200px;
 }
