--- a/Front/src/components/styles/sidebar.css
+++ b/Front/src/components/styles/sidebar.css
@@ -21,6 +21,7 @@
   .sidebar.open{
     width: 70px;
     background: #0f1118;
+    color: rgba(255, 255, 255, 0);
   }
   .sidebar h1{
     padding-bottom: 20px;
@@ -29,7 +30,6 @@
     padding-left: 20px;
     display: grid;
     place-items: center;
-    width: 30px;
     height: 30px;
     background-color: #ffffff00;
     border-style: none;
@@ -166,3 +166,30 @@
       display: flex;
     }
   }
+
+  .topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
