--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -3,6 +3,8 @@
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.4s;
   margin-left: 70px;
+  color: black;
+  
 }
 .App.open{
   margin-left: 200px;
