--- a/Front/src/components/styles/sidebar.css
+++ b/Front/src/components/styles/sidebar.css
@@ -27,14 +27,13 @@
     padding-bottom: 20px;
   }
   .sidebar-toogle{
+    padding-top: 20px;
     padding-left: 20px;
     display: grid;
     place-items: center;
     height: 30px;
     background-color: #ffffff00;
     border-style: none;
-    margin-top: 10px;
-    margin-bottom: 20px;
   }
   
   .nav-item{
@@ -44,23 +43,23 @@
     font-size: 18px;
     color: rgb(255, 255, 255);
     display: flex;
-
   }
   .nav-item:hover{
-    background-color: white;
+    background-color: #1d20ca;
     transition-duration: 400ms;
-    color: black;
-    border-left: solid 2px  #1d20ca;
+    color: white;
+    border-left: solid 2px wheat;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+
+  }
+  .active{
+    background-color: #1d20ca;
+    color: white;
+    border-left: solid 2px wheat;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
   }
-  /* .active{
-    background-color: white;
-    color: black;
-    border-left: solid 2px  #1d20ca;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-  } */
   .dec-cont{
     padding-top: 420px;
   }
@@ -78,17 +77,15 @@
     background-color: #1d20ca;
     transition-duration: 400ms;
     color: white;
-    border-left: solid 2px  #1d20ca;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+    border-left: solid 2px wheat;
   }
   .nav-menu{
     display: flex;
   }
   @media screen and (max-width: 600px) {
     .burger{
-      width: 25px;
-      height: 3px;
+      width: 35px;
+      height: 4px;
       background-color: black;
     }
     .sidebar-toogle{
@@ -201,4 +198,11 @@
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
+}
+
+.sideText{
+  color: white;
+}
+.sideText.open{
+  translate: -300px;
 }
