--- a/Front/src/components/styles/sidebar.css
+++ b/Front/src/components/styles/sidebar.css
@@ -1,8 +1,115 @@
 .burger{
+  width: 35px;
+  height: 4px;
+  background-color: rgb(253, 253, 253);
+  margin: 3px 0;
+}
+.sidebar{
+  transition: 0.4s;
+}
+.sidebar{
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 100%;
+  background: #0f1118;
+}
+.sidebar.open{
+  width: 70px;
+  background: #0f1118;
+  color: rgba(255, 255, 255, 0);
+}
+.sidebar h1{
+  padding-bottom: 20px;
+}
+.sidebar-toogle{
+  padding-top: 20px;
+  padding-left: 20px;
+  display: grid;
+  place-items: center;
+  height: 30px;
+  background-color: #ffffff00;
+  border-style: none;
+}
+
+.nav-item{
+  display: flex;
+  padding: 8px 8px 8px 20px;
+  text-decoration: none;
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  display: flex;
+}
+.nav-item:hover{
+  background-color: #4143c4;
+  transition-duration: 400ms;
+  color: white;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+
+}
+.active{
+  background-color: #1d20ca;
+  color: white;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+
+.nav-item.open:hover{
+  background-color: #1d20ca;
+  transition-duration: 400ms;
+  color: white;
+  border-radius: 30px;
+
+}
+.active.open{
+  background-color: #1d20ca;
+  color: white;
+  border-radius: 30px;
+}
+
+.dec-cont{
+  padding-top: 420px;
+}
+.dec-item{
+  padding: 8px 8px 8px 20px;
+  text-decoration: none;
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  background-color: #0f111800;
+  border-style: none;
+  width: 100%;
+  display: flex;
+}
+.dec-item:hover{
+  background-color: #1d20ca;
+  transition-duration: 400ms;
+  color: white;
+  border-left: solid 2px wheat;
+}
+.nav-menu{
+  display: flex;
+}
+@media screen and (max-width: 600px) {
+  .burger{
     width: 35px;
     height: 4px;
-    background-color: rgb(253, 253, 253);
-    margin: 3px 0;
+    background-color: black;
+  }
+  .sidebar-toogle{
+    position: absolute;
+    top: 0;
+    right: -30px;
+    display: grid;
+    place-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: #00490400;
+    border-style: none;
   }
   .sidebar{
     transition: 0.4s;
@@ -16,24 +123,20 @@
     flex-direction: column;
     width: 200px;
     height: 100%;
-    color: black;
     background: #0f1118;
-    box-shadow: 7px 10px 10px rgb(120, 120, 120);
   }
   .sidebar.open{
-    width: 70px;
+    translate: -80px 0;
     background: #0f1118;
-    color: rgba(255, 255, 255, 0);
-    
   }
   .sidebar h1{
     padding-bottom: 20px;
   }
   .sidebar-toogle{
-    padding-top: 20px;
     padding-left: 20px;
     display: grid;
     place-items: center;
+    width: 30px;
     height: 30px;
     background-color: #ffffff00;
     border-style: none;
@@ -44,7 +147,7 @@
     padding: 8px 8px 8px 20px;
     text-decoration: none;
     font-size: 18px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     display: flex;
   }
   .nav-item:hover{
@@ -52,16 +155,11 @@
     transition-duration: 400ms;
     color: white;
     border-left: solid 2px wheat;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-
   }
   .active{
     background-color: #1d20ca;
     color: white;
     border-left: solid 2px wheat;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
   }
   .dec-cont{
     padding-top: 420px;
@@ -85,128 +183,87 @@
   .nav-menu{
     display: flex;
   }
-  @media screen and (max-width: 600px) {
-    .burger{
-      width: 35px;
-      height: 4px;
-      background-color: black;
-    }
-    .sidebar-toogle{
-      position: absolute;
-      top: 0;
-      right: -30px;
-      display: grid;
-      place-items: center;
-      width: 30px;
-      height: 30px;
-      background-color: #00490400;
-      border-style: none;
-    }
-    .sidebar{
-      transition: 0.4s;
-    }
-    .sidebar{
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      display: flex;
-      flex-direction: column;
-      width: 200px;
-      height: 100%;
-      background: #0f1118;
-    }
-    .sidebar.open{
-      translate: -80px 0;
-      background: #0f1118;
-    }
-    .sidebar h1{
-      padding-bottom: 20px;
-    }
-    .sidebar-toogle{
-      padding-left: 20px;
-      display: grid;
-      place-items: center;
-      width: 30px;
-      height: 30px;
-      background-color: #ffffff00;
-      border-style: none;
-    }
-    
-    .nav-item{
-      display: flex;
-      padding: 8px 8px 8px 20px;
-      text-decoration: none;
-      font-size: 18px;
-      color: rgb(255, 255, 255);
-      display: flex;
-    }
-    .nav-item:hover{
-      background-color: #1d20ca;
-      transition-duration: 400ms;
-      color: white;
-      border-left: solid 2px wheat;
-    }
-    .active{
-      background-color: #1d20ca;
-      color: white;
-      border-left: solid 2px wheat;
-    }
-    .dec-cont{
-      padding-top: 420px;
-    }
-    .dec-item{
-      padding: 8px 8px 8px 20px;
-      text-decoration: none;
-      font-size: 18px;
-      color: rgb(255, 255, 255);
-      background-color: #0f111800;
-      border-style: none;
-      width: 100%;
-      display: flex;
-      translate: -300px;
-    }
-    .dec-item:hover{
-      background-color: #1d20ca;
-      transition-duration: 400ms;
-      color: white;
-      border-left: solid 2px wheat;
-    }
-    .nav-menu{
-      display: flex;
-    }
-  }
+}
 
-  .topnav {
-  background-color: #333;
-  overflow: hidden;
+.topnav {
+background-color: #333;
+overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+background-color: #ddd;
+color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+background-color: #04AA6D;
+color: white;
 }
 
 .sideText{
-  color: white;
+color: white;
 }
 .sideText.open{
-  translate: -300px;
+translate: -300px;
 }
+
+.topbar{
+margin-left: 50%;
+}
+
+/* Dropdown Button */
+.dropbtn {
+background-color: #3498DB;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
