--- a/Front/src/components/styles/sidebar.css
+++ b/Front/src/components/styles/sidebar.css
@@ -45,7 +45,7 @@
   display: flex;
 }
 .nav-item:hover{
-  background-color: #4143c4;
+  background-color: #1d20ca;
   transition-duration: 400ms;
   color: white;
   border-top-left-radius: 25px;
