--- a/Front/src/components/styles/sidebar.css
+++ b/Front/src/components/styles/sidebar.css
@@ -1,14 +1,13 @@
-.burger {
+.burger{
   width: 35px;
   height: 4px;
   background-color: rgb(253, 253, 253);
   margin: 3px 0;
 }
-
-.sidebar {
+.sidebar{
   transition: 0.4s;
 }
-.sidebar {
+.sidebar{
   position: fixed;
   z-index: 1;
   top: 0;
@@ -19,18 +18,15 @@
   height: 100%;
   background: #0f1118;
 }
-
-.sidebar.open {
+.sidebar.open{
   width: 70px;
   background: #0f1118;
   color: rgba(255, 255, 255, 0);
 }
-
-.sidebar h1 {
+.sidebar h1{
   padding-bottom: 20px;
 }
-
-.sidebar-toogle {
+.sidebar-toogle{
   padding-top: 20px;
   padding-left: 20px;
   display: grid;
@@ -40,52 +36,48 @@
   border-style: none;
 }
 
-.nav-button {
+.nav-item{
   display: flex;
   padding: 8px 8px 8px 20px;
   text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
   font-size: 18px;
   color: rgb(255, 255, 255);
   display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.4s;
-  width: 200px; 
-  height: 50px;
 }
+.nav-item:hover{
+  background-color: #1d20ca;
+  transition-duration: 400ms;
+  color: white;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 
-.nav-button:hover {
+}
+.active{
   background-color: #1d20ca;
   color: white;
-  border-left: solid 2px wheat;
-  justify-content: flex-start;
-  border-top-left-radius: 25px; /* Ajoutez cette propriété */
-  border-bottom-left-radius: 25px; /* Ajoutez cette propriété */
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
-.nav-button.active {
+.nav-item.open:hover{
+  background-color: #1d20ca;
+  transition-duration: 400ms;
+  color: white;
+  border-radius: 30px;
+
+}
+.active.open{
   background-color: #1d20ca;
   color: white;
-  border-left: solid 2px wheat;
+  border-radius: 30px;
 }
 
-.sidebar-toogle {
-  padding-left: 20px;
-  display: grid;
-  place-items: center;
-  width: 30px;
-  height: 30px;
-  background-color: #ffffff00;
-  border-style: none;
-}
-
-.dec-cont {
+.dec-cont{
   padding-top: 420px;
 }
-
-.dec-item {
+.dec-item{
   padding: 8px 8px 8px 20px;
   text-decoration: none;
   font-size: 18px;
@@ -95,26 +87,22 @@
   width: 100%;
   display: flex;
 }
-
-.dec-item:hover {
+.dec-item:hover{
   background-color: #1d20ca;
   transition-duration: 400ms;
   color: white;
   border-left: solid 2px wheat;
 }
-
-.nav-menu {
+.nav-menu{
   display: flex;
 }
-
 @media screen and (max-width: 600px) {
-  .burger {
+  .burger{
     width: 35px;
     height: 4px;
     background-color: black;
   }
-
-  .sidebar-toogle {
+  .sidebar-toogle{
     position: absolute;
     top: 0;
     right: -30px;
@@ -125,9 +113,10 @@
     background-color: #00490400;
     border-style: none;
   }
-
-  .sidebar {
-    transition: 0.5s;
+  .sidebar{
+    transition: 0.4s;
+  }
+  .sidebar{
     position: fixed;
     z-index: 1;
     top: 0;
@@ -138,17 +127,14 @@
     height: 100%;
     background: #0f1118;
   }
-
-  .sidebar.open {
-    transform: translateX(-80px);
+  .sidebar.open{
+    translate: -80px 0;
     background: #0f1118;
   }
-
-  .sidebar h1 {
+  .sidebar h1{
     padding-bottom: 20px;
   }
-
-  .sidebar-toogle {
+  .sidebar-toogle{
     padding-left: 20px;
     display: grid;
     place-items: center;
@@ -157,38 +143,30 @@
     background-color: #ffffff00;
     border-style: none;
   }
-
-  .nav-button {
-    width: 100%; /* Prendre la largeur du side nav fermé */
+  
+  .nav-item{
     display: flex;
-    align-items: center;
-    padding: 8px 20px; /* Ajustez les espacements comme souhaité */
+    padding: 8px 8px 8px 20px;
     text-decoration: none;
     font-size: 18px;
     color: rgb(255, 255, 255);
     display: flex;
-    transition: width 0.4s; /* Ajoutez une transition pour la largeur */
   }
-
-  .nav-button:hover {
+  .nav-item:hover{
     background-color: #1d20ca;
     transition-duration: 400ms;
     color: white;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-    width: 100%; /* La largeur s'élargira au passage du curseur */
+    border-left: solid 2px wheat;
   }
-  .nav-button.active {
+  .active{
     background-color: #1d20ca;
     color: white;
     border-left: solid 2px wheat;
   }
-
-  .dec-cont {
+  .dec-cont{
     padding-top: 420px;
   }
-
-  .dec-item {
+  .dec-item{
     padding: 8px 8px 8px 20px;
     text-decoration: none;
     font-size: 18px;
@@ -198,72 +176,102 @@
     width: 100%;
     display: flex;
   }
-
-  .dec-item:hover {
+  .dec-item:hover{
     background-color: #1d20ca;
     transition-duration: 400ms;
     color: white;
     border-left: solid 2px wheat;
   }
-
-  .nav-menu {
+  .nav-menu{
     display: flex;
   }
 }
-.sideText {
-  color: white;
-  transition: transform 0.3s;
+
+.topnav {
+background-color: #333;
+overflow: hidden;
 }
 
-.sidebar.open .sideText {
-  transform: translateX(-300%);
-}
-.nav-button:hover {
-  background-color: #1d20ca;
-  transition-duration: 400ms;
-  color: white;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-  width: 100%; 
-}
-/* 
-.sidebar {
-  transition: 0.4s;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  width: 200px;
-  height: 100%;
-  background: #0f1118;
+/* Style the links inside the navigation bar */
+.topnav a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
 }
 
-.sidebar.open {
-  width: 70px;
-  background: #0f1118;
-  color: rgba(255, 255, 255, 0);
+/* Change the color of links on hover */
+.topnav a:hover {
+background-color: #ddd;
+color: black;
 }
 
-.nav-button {
-  width: 100%; /* Prendre la largeur du side nav fermé 
-  display: flex;
-  align-items: center;
-  padding: 8px 20px; /* Ajustez les espacements comme souhaité 
-  text-decoration: none;
-  font-size: 18px;
-  color: rgb(255, 255, 255);
-  display: flex;
-  transition: width 0.4s; /* Ajoutez une transition pour la largeur 
+/* Add a color to the active/current link */
+.topnav a.active {
+background-color: #04AA6D;
+color: white;
 }
 
+.sideText{
+color: white;
+}
+.sideText.open{
+translate: -300px;
+}
 
+.topbar{
+margin-left: 50%;
+}
 
-.active {
-  background-color: #1d20ca;
-  color: white;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-  width: 100%; /* Maintient la largeur sur le bouton actif 
-} */
+/* Dropdown Button */
+.dropbtn {
+background-color: #3498DB;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../styles/Poppins/Poppins-Regular.ttf') format('truetype');
+  /* Ajoutez d'autres variantes de police ici si nécessaire */
+}
